option java_package = "com.jjy.game.message.hall";
import "Mid.proto";

//获取帮会详细信息
message GuildInfoRequest{
	optional MID mid					= 1 [default =  GuildInfoReq]; 	//消息id
	optional int64 guildId				= 2; //帮会ID 
}
//获取帮会详细信息
message GuildInfoResponse{
	optional MID mid					= 1 [default =  GuildInfoRes]; 	//消息id
	optional GuildInfo guildInfo		= 2; //帮会信息 
}


//帮会列表，加入时的申请列表
message GuildListRequest{
	optional MID mid					= 1 [default =  GuildListReq]; 	//消息id
}
//帮会列表，加入时的申请列表
message GuildListResponse{
	optional MID mid					= 1 [default =  GuildListRes]; 	//消息id
	repeated GuildInfo guilds			= 2; //帮会列表，不传人员
}

//申请加入公会
message ApplyGuildRequest{
	optional MID mid					= 1 [default =  ApplyGuildReq]; 	//消息id
	optional int64 guildId				= 2; //帮会ID 
}
//申请加入公会
message ApplyGuildResponse{
	optional MID mid					= 1 [default =  ApplyGuildRes]; 	//消息id
	optional int32 result				= 2; //
}


//管理员公会审批（批准加入、踢人、解散...）
message GuildApprovalRequest{
	optional MID mid					= 1 [default =  GuildApprovalReq]; 	//消息id
	optional int64 roleId				= 2; //被操作的角色
	required int32 type					= 3; //操作类型 0批准加入、1踢人、2解散
}
//管理员公会审批（批准加入、踢人、解散...）
message GuildApprovalResponse{
	optional MID mid					= 1 [default =  GuildApprovalRes]; 	//消息id
	required int32 result				= 2; //结果
}

//创建公会
message CreateGuildRequest{
	optional MID mid					= 1 [default =  CreateGuildReq]; 	//消息id
	required string name				= 2; //公会名称
}
//创建公会
message CreateGuildResponse{
	optional MID mid					= 1 [default =  CreateGuildRes]; 	//消息id
	required int32 result				= 2; //结果
	optional GuildInfo guildInfo		= 3; //公会信息
}



//帮会信息
message GuildInfo{
	required int64 id				= 1; //ID
	required string name			= 2; //帮会名称
	required int64 masterId			= 3; //帮主ID
	required int32 level			= 4; //等级
	repeated GuildMemberInfo members= 5; //帮会成员
}

//公会成员信息
message GuildMemberInfo{
	required int64 roleId			= 1; //角色Id
	required string name 			= 2; //昵称
	required int32 level			= 3; //等级
}

